--- a/index.amp.html
+++ b/index.amp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stylist.css" />
-    <link rel="stylesheet" href="style.css" />
+   
     <title>Maliek Login Loading</title>
   </head>
   <body>
@@ -13,6 +13,14 @@
 
     <script src="scriptlist.js"></script>
 
+
+    <div class="search">
+      <input type="text" class="input" placeholder="Search...">
+      <button class="btn">
+        <i class="fas fa-search"></i>
+      </button>
+    </div>
+    <script src="search.js"></script>
     
   </body>
 </html>
